--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Gary Grant",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongoose": "^5.13.15"
   }
 }
