--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
   "author": "Gary Grant",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.4.0",
     "express": "^4.18.2",
     "mongoose": "^5.13.15",
     "morgan": "^1.10.0",
-    "react-router-dom": "^5.3.4"
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^5.3.4",
+    "redux": "^4.2.1",
+    "redux-toolkit": "^1.1.2"
   }
 }
