--- a/package.json
+++ b/package.json
@@ -4,18 +4,28 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "server":"nodemon server.js",
+    "client":"npm start --prefix client",
+    "dev":"concurrently \"npm run server\" \"npm run client\" ",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "author": "Gary Grant",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.4.0",
+    "concurrently": "^8.2.0",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^5.13.15",
     "morgan": "^1.10.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^5.3.4",
     "redux": "^4.2.1",
-    "redux-toolkit": "^1.1.2"
+    "redux-toolkit": "^1.1.2",
+    "yarn": "^1.22.19"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
